cmake_minimum_required(VERSION 3.22)
project(CppCourse)

set(CMAKE_CXX_STANDARD 11)

add_executable(CppCourse Lab00/ex1.cpp Lab00/ex2.cpp Lab00/ex3.cpp Lab01/main.c Lab01/ADTStack.c lab02/main.cpp
        lab03/String.cpp lab03/String.h lab03/main.cpp HW03/DoubleVector.cpp HW03/DoubleVector.h HW01/main.cpp
HW01/Observation.cpp HW01/Observation.h HW01/ObservationVector.cpp HW01/ObservationVector.h lab04/SquareMat.cpp
lab04/SquareMat.h lab04/main.cpp lab05/Stack.cpp lab05/Stack.h lab05/main.cpp lab06/Stack.cpp lab06/Stack.h lab06/main.cpp
lab06/List.cpp HW02/main.cpp HW02/Board.cpp HW02/Board.h HW02/Cell.cpp HW02/Cell.h HW02/Player.cpp HW02/Player.h
lab07/Robot.cpp lab07/Robot.h lab07/Transformer.h lab07/Transformer.cpp HW03/main.cpp
       HW03/SortedVirusLinkedList.cpp HW03/SortedVirusLinkedList.h
lab07/Robot.cpp lab07/Robot.h lab07/Transformer.h lab07/Transformer.cpp lab08/Shape.h lab08/Shape.cpp lab08/Rectangle.h
        lab08/Rectangle.cpp lab08/Triangle.h lab08/Triangle.cpp lab08/Square.h lab08/Square.cpp lab08/RightTriangle.h
        lab08/RightTriangle.cpp lab08/main.cpp lab09/Animal.cpp lab09/Donkey.h lab09/Horse.h lab09/Mule.h lab09/Mule.cpp
        lab09/main.cpp HW04/Queue.h HW04/Queue.cpp HW04/main.cpp HW04/Vector.h HW04/Vector.cpp lab10/LinkedList.h
        lab10/LinkedList.cpp lab10/main.cpp HW04/Virus.cpp HW04/Virus.h HW04/VirusPopulation.cpp HW04/VirusPopulation.h
        HW04/VirusPopulation.h HW04/Virus.cpp)
